# bashon

./: LICENSE  README.md  pyproject.toml
src/bashon/: __init__.py  cli.py  core.py  errors.py  registry.py
tests/: __init__.py  test_cli.py
tests/fixtures/: __init__.py  sample_commands.py
