[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[project]
name = "bashon"
version = "0.1.0"
description = "Agent-first Python-to-CLI toolkit for turning decorated Python callables into commands."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Alex" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
bashon = "bashon.cli:main"

[dependency-groups]
dev = [
  "langchain-core>=0.3,<1",
  "pydantic>=2,<3",
]

[tool.uv]
package = true
